Improve the check of the input value for DICOMWeb